# tmpl-python-langgraph-agent-tools

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: README.md
infra/envs/dev/: README.md
infra/envs/prod/: README.md
services/agent-runtime/: Dockerfile  README.md  pyproject.toml
services/agent-runtime/config/: dev.yaml  prod.yaml  settings.py  staging.yaml
services/agent-runtime/services/tool-gateway/: README.md
services/agent-runtime/src/: app.py  run_once.py
services/agent-runtime/src/agents/: executor.py  planner.py
services/agent-runtime/src/graph/: build_graph.py  state.py
services/agent-runtime/src/observability/: logging.py  tracing.py
services/agent-runtime/src/tools/: bindings.py
services/agent-runtime/tests/: debug_yaml_import.py  test_bindings.py  test_config.py  test_config_manual.py  test_smoke.py
services/shared/contracts/: tool-gateway-contract.md
services/tool-gateway/: Dockerfile  README.md  lambda_handler.py  openapi.yaml  pyproject.toml
services/tool-gateway/config/: dev.yaml  settings.py  staging.yaml
services/tool-gateway/src/: app.py  contract.py
services/tool-gateway/src/contracts/: envelope.py
services/tool-gateway/src/tools/: registry.py  search_kb.py
services/tool-gateway/tests/: test_get_member.py  test_health.py  test_search_kb.py  test_validation_envelope.py  test_write_case_note.py
