[tool.poetry]
name = "agent-runtime"
version = "0.1.0"
description = "LangGraph agent runtime"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
requests = "^2.32.0"
python = "^3.11"
langgraph = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
